Add chagnes to url paths

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Search plugin</title>
 </head>
 <body>
-    <div>
-        <form>
+    <div class="outer-search__container">
+        <form class="form_class">
+            <label class="label-search">Please enter your search query</label>
             <input id="query_field" type="text" placeholder="Search here"></input>
             <button type="submit" id="submit-button">SUBMIT</button>
         </form>
+        <p id="current-status"></p>
     </div>
     <script src="./script.js"></script>
 </body>
