--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <input id="query_field" type="text" placeholder="Search here"></input>
             <button type="submit" id="submit-button">SUBMIT</button>
         </form>
-        <p id="current-status"></p>
+        <div class="loader display-none" id="current-status"></div>
+    </div>
+    <div id="image-container">
+
     </div>
     <script src="./script.js"></script>
 </body>
